# geek-recorder

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults
designs/: recorder.md
main/: .app_main.c.swp  CMakeLists.txt  Kconfig.projbuild  app.c  app_main.c  asr_ws.c  asr_ws.h  font8x8_basic.h  http_server.c  http_server.h  idf_component.yml  lcd_text.c  lcd_text.h  lvgl_fs_sd.c  lvgl_port.c  lvgl_port.h  mic.c  mic.h  sdcard.c  sdcard.h  ui.c  ui.h  wifi_mgr.c  wifi_mgr.h
main/fonts/: README.md
references/: paraformer.md
